# MicroSentinel

./: .gitignore  CMakeLists.txt  README.md  run_data_object_manual.py
.copilot/todos/: todo.json
agent/: CMakeLists.txt  agent.conf
agent/include/micro_sentinel/: aggregator.h  anomaly.h  anomaly_monitor.h  bpf_orchestrator.h  bucket_update.h  clickhouse_sink.h  config.h  config_loader.h  control_messages.h  control_plane.h  fs_detector.h  interference.h  json.h  metrics_exporter.h  mode_controller.h  monitoring_targets.h  perf_consumer.h  pmu_rotator.h  remote_dram_analyzer.h  runtime.h  sample.h  scope_logger.h  skew_adjuster.h  symbolizer.h  tsc_calibrator.h
agent/src/: aggregator.cpp  anomaly_monitor.cpp  bpf_orchestrator.cpp  bucket_update.cpp  clickhouse_sink.cpp  config_loader.cpp  control_plane.cpp  fs_detector.cpp  interference.cpp  json.cpp  main.cpp  metrics_exporter.cpp  mode_controller.cpp  monitoring_targets.cpp  perf_consumer.cpp  pmu_rotator.cpp  remote_dram_analyzer.cpp  runtime.cpp  skew_adjuster.cpp  symbolizer.cpp  tsc_calibrator.cpp
agent/tests/: test_json.cpp  test_monitoring_targets.cpp  test_skew_adjuster.cpp  test_token_bucket.cpp
artifacts/experiments/kv_20251211_081539/: plan.json
artifacts/experiments/kv_20251211_081640/: plan.json
artifacts/experiments/kv_20251211_081724/: plan.json  run_result.json
artifacts/experiments/kv_20251211_081927/: plan.json  run_result.json
artifacts/experiments/kv_20251211_082144/: plan.json  run_result.json
artifacts/experiments/kv_20251211_082643/: plan.json  run_result.json
artifacts/experiments/kv_20251211_083458/: plan.json  run_result.json
artifacts/experiments/kv_20251211_083907/: plan.json
artifacts/experiments/kv_20251211_084829/: plan.json  run_result.json
backend/: clickhouse_schema.sql  dashboards.md
backend/migrations/: 202501_direction_and_data_objects.sql  20251224_add_ingest_ts.sql
bpf/: Makefile  micro_sentinel_kern.bpf.c  ms_common.h  prometheus_metrics.yaml  vmlinux.h
docs/: EXPERIMENT_AUTOMATION.md  EXPERIMENT_PLATFORM.md  IMPLEMENTATION_PLAN.md  OPERATIONS_GUIDE.md  RUNBOOK.md  SYSTEM_IMPLEMENTATION.md  TWO_NODE_DEPLOYMENT.md  UPGRADE_GUIDE.md  WORKLOAD_GUIDE.md
experiments/automation/: analyze_branch_mispredict.py  analyze_data_object.py  analyze_false_sharing.py  analyze_flow_accuracy.py  analyze_numa_imbalance.py  analyze_overhead.py  analyze_scalability.py  artifact_metrics.py  finalize_manifest.py  find_load_star.py  instrumentation.py  plot_section5_figures.py  pmu_catalog.py  process_utils.py  repair_remote_metrics.py  rerun_from_artifact.py  results.py  run_all_suites.py  run_suite.py  setup_environment.sh  validate_artifacts.py  workload_runner.py
experiments/configs/: platform.yaml
experiments/configs/experiments/: branch_mispredict.yaml  data_object.yaml  false_sharing.yaml  flow_accuracy.yaml  flow_accuracy_backup.yaml  flow_accuracy_smoke.yaml  flow_accuracy_smoke_local.yaml  numa_imbalance.yaml  overhead.yaml  scalability.yaml  scalability_smoke.yaml
experiments/configs/instrumentation/: defaults.yaml
experiments/configs/workloads/: kv.yaml  kv_local.yaml  lb.yaml  load_balancer.yaml  nfv.yaml  nfv_service_chain.yaml
experiments/notebooks/: evaluation_dashboard.ipynb
experiments/workloads/kv/: kv_client.py  kv_server.py
experiments/workloads/lb/: backend_echo.py  data_object_client.py  l4_lb.py  lb_client.py  lb_hot_server.cpp  lb_hot_server_5.3_v1  lb_hot_server_5.3_v1.cpp
experiments/workloads/nfv/: firewall.py  logger.py  nat.py  rate_limiter.py  traffic_gen.py  truth_log.py
experiments/workloads/nfv/policies/: firewall.yaml
include/micro_sentinel/: scope_logger.h
temp/: main.c  net_kprobe.bpf.c  net_kprobe.skel.h  net_monitor
temp2/: Makefile  net_monitor  net_monitor.bpf.c  net_monitor.c  net_monitor.h  net_monitor.skel.h  net_trace.bpf.c  net_trace.c
